# gnotebook

./: .gitignore  app.vala  gnotebook.cmb  gnotebook.gresource.xml  gnotebook.ui  main.vala  media.vala  meson.build  notebook.vala  page.vala  rename.vala  undo.vala  window.vala
